--- a/gitnotes.ipynb
+++ b/gitnotes.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "more notes and changes here"
+    "more notes and changes here\n",
+    "\n",
+    "change change"
    ]
   },
   {
