--- a/gitnotes.ipynb
+++ b/gitnotes.ipynb
@@ -15,8 +15,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#general programming notes go here?"
+    "#general programming notes go here\n",
+    "\n",
+    "#test test push "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
