--- a/PythonFunctions.ipynb
+++ b/PythonFunctions.ipynb
@@ -111,6 +111,47 @@
    "source": [
     "#5. Write a Python function to calculate the factorial of a number (a non-negative integer). The function accepts the number as an argument."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#6. FizzBuzz Problem\n",
+    "\n",
+    "def fizzBuzz(n):\n",
+    "    for i in range(1, (n+1)):\n",
+    "        if i % 3 == 0 and i % 5 == 0:\n",
+    "            print(\"FizzBuzz\")\n",
+    "        elif i % 3 == 0:\n",
+    "            print(\"Fizz\")\n",
+    "        elif i % 5 == 0:\n",
+    "            print(\"Buzz\")\n",
+    "        else:\n",
+    "            print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "Fizz\n",
+      "4\n",
+      "Buzz\n"
+     ]
+    }
+   ],
+   "source": [
+    "fizzBuzz(5)"
+   ]
   }
  ],
  "metadata": {
