Added FizzBuzz function

--- a/PythonFunctions.ipynb
+++ b/PythonFunctions.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#6. FizzBuzz Problem\n",
+    "#6. FizzBuzz Problem:  given number n, check if multiple of 3 and/or 5, and print out accordingly. \n",
     "\n",
     "def fizzBuzz(n):\n",
     "    for i in range(1, (n+1)):\n",
