--- a/PythonFunctions.ipynb
+++ b/PythonFunctions.ipynb
@@ -152,14 +152,86 @@
    "source": [
     "fizzBuzz(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convert a given string to camel case\n",
+    "\n",
+    "ans = \"\"\n",
+    "def camel_case(string):\n",
+    "    for letter in string:\n",
+    "        if letter.isupper():\n",
+    "            ans.append(letter)\n",
+    "    return ans\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mUbuntu-18.04\\home\\lmedina20\\programming-notes\\PythonFunctions.ipynb Cell 10\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell://wsl%24/Ubuntu-18.04/home/lmedina20/programming-notes/PythonFunctions.ipynb#ch0000010?line=0'>1</a>\u001b[0m camel_case(\u001b[39m\"\u001b[39;49m\u001b[39mWOW\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "\u001b[1;32mUbuntu-18.04\\home\\lmedina20\\programming-notes\\PythonFunctions.ipynb Cell 10\u001b[0m in \u001b[0;36mcamel_case\u001b[1;34m(string)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell://wsl%24/Ubuntu-18.04/home/lmedina20/programming-notes/PythonFunctions.ipynb#ch0000010?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m letter \u001b[39min\u001b[39;00m string:\n\u001b[0;32m      <a href='vscode-notebook-cell://wsl%24/Ubuntu-18.04/home/lmedina20/programming-notes/PythonFunctions.ipynb#ch0000010?line=5'>6</a>\u001b[0m     \u001b[39mif\u001b[39;00m letter\u001b[39m.\u001b[39misupper():\n\u001b[1;32m----> <a href='vscode-notebook-cell://wsl%24/Ubuntu-18.04/home/lmedina20/programming-notes/PythonFunctions.ipynb#ch0000010?line=6'>7</a>\u001b[0m         ans\u001b[39m.\u001b[39;49mappend(letter)\n\u001b[0;32m      <a href='vscode-notebook-cell://wsl%24/Ubuntu-18.04/home/lmedina20/programming-notes/PythonFunctions.ipynb#ch0000010?line=7'>8</a>\u001b[0m \u001b[39mreturn\u001b[39;00m ans\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'append'"
+     ]
+    }
+   ],
+   "source": [
+    "camel_case(\"WOW\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Given an array arr[] of N strings, \n",
+    "#each containing words with upper or lower case English alphabets, \n",
+    "#the task is to create a sentence in a Camel Case format using them.\n",
+    "\n",
+    "def convertCase(arr, N):\n",
+    "    #store final sentence\n",
+    "    ans = \"\"\n",
+    "\n",
+    "    #loop to iterate over the given array\n",
+    "    for word in range(N):\n",
+    "        if(len(ans) > 0):\n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hackerrank - jpmorgan question\n",
+    "\n",
+    "def longestEvenWord(sentence):\n",
+    "    longestWord = ''\n",
+    "\n",
+    "    for word in sentence:\n",
+    "        if len(word) > len(longestWord):\n",
+    "            longestWord += word\n",
+    "    return(longestWord)"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "b81bd998f5e06d1e12e6f5797a5ef2e6ca2a465bf0d0caddc9c77c652e6c18e6"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('datavenv')",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -173,9 +245,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "35814977a283cd769a53edfec29b9560f6d54622677c01a029034c610ae113d2"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
